# pacman.c

./: .gitignore  CLAUDE.md  CMakeCache.txt  CMakeLists.txt  CNAME  DEPLOYMENT.md  Makefile  README.md  WEB_DEPLOYMENT_SUMMARY.md  cmake_install.cmake  package.json  pacman.c  pacman.js  pacman.wasm
.github/workflows/: deploy.yml  test.yml
scripts/: build-web.bat  build-web.sh
